# realworld-axum-api

./: .env.sample  Cargo.toml
migrations/: 20251019043410_create_users_table.sql
src/: main.rs  state.rs
src/auth/: jwt.rs  middleware.rs
src/handlers/: auth.rs  health.rs
src/repositories/: user.rs
src/schemas/: auth.rs  mod.rs  user.rs
